Fix container fullwidth on mobile - 100% width under 768px

--- a/css/app.css
+++ b/css/app.css
@@ -3935,7 +3935,12 @@ input[type="number"] {
     max-width: 100%;
 }
 .container {
-    max-width: calc(100vw - 10%);
+    max-width: 100%;
+}
+@media (min-width: 768px) {
+    .container {
+        max-width: calc(100vw - 10%);
+    }
 }
 .container-lg {
     max-width: calc(100vw - 20%);
